--- a/index.html
+++ b/index.html
@@ -4,9 +4,76 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documen test4441111222555 home9</title>
+    <title>WebStudio</title>
 </head>
 <body>
-    
+    <header>
+        <h2>WebStudio</h2>
+        <nav>
+            <ul>
+                <li><a href="">Студія</a></li>
+                <li><a href="">Портфоліо</a></li>
+                <li><a href="">Контакти</a></li>
+            </ul>
+        </nav>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+    </header>
+    <main>
+        <!--Hero section-->
+            <section>
+            <h1>Ефективні рішення для вашого бізнесу</h1>
+            <button type="button"> Замовити послугу </button>
+        </section>
+        <!--Section our prioritets-->
+        <section>
+            <ul>
+                <li> <h3>УВАГА ДО ДЕТАЛЕЙ</h3> Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</li>
+                <li> <h3>ПУНКТУАЛЬНІСТЬ</h3>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</li>
+                <li><h3>ПЛАНУВАННЯ</h3>Так само консультація з широким активом значною мірою зумовлює.</li>
+                <li><h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</li>
+            </ul>
+        </section>
+        <!--What do we do-->
+        <section>
+            <h2>Чим ми займаємося</h2>
+            <ul>
+                <li><img src="img/box 1.jpg" alt="tablet" width=370 height="294"></li>
+                <li><img src="img/box 2.jpg" alt="laptop" width=370 height="294"></li>
+                <li><img src="img/box 3.jpg" alt="picture on tablet" width=370 height="294"></li>
+            </ul>
+
+        </section>
+        <!--Our team-->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li> <img src="img/Ігор.jpg" alt="Igor" width=270>
+                <h3>Ігор Дем'яненко</h3>
+                <p>Product Designer</p>
+            </li>
+                <li> <img src="img/Ольга.jpg" alt="Olga" width=270>
+                <h3>Ольга Рєпіна</h3>
+                <p>Frontend Developer</p>
+            </li>
+                <li> <img src="img/Микола.jpg" alt="Mykola" width=270>
+                <h3>Микола Тарасов</h3>
+                <p>Marketing</p>
+            </li>
+                <li> <img src="img/Михайло.jpg" alt="Mykhailo" width=270>
+                <h3>Михайло Єрмаков</h3>
+                <p>UI Designer</p>
+            </li>
+            </ul>            
+        </section>
+    </main>
+    <footer>
+        <h2>WebStudio</h2>
+        <ul>
+            <li> <a href="https://goo.gl/maps/cJpdM1vkZqxWry588">м. Київ, пр-т Лесі Українки, 26</a> </li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
