--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
         <nav>
+            <a href="#">WebStudio</a>
             <ul>
-                <li><a href="#">WebStudio</a></li>
                 <li><a href="#">Студія</a></li>
                 <li><a href="#">Портфоліо</a></li>
                 <li><a href="#">Контакти</a></li>
@@ -48,28 +49,28 @@
         <section>
             <h2>Чим ми займаємося</h2>
             <ul>
-                <li><img src="image/box 1.jpg" alt="tablet"width=370 height="294"></li>
-                <li><img src="image/box 2.jpg" alt="laptop"width=370 height="294"></li>
-                <li><img src="image/box 3.jpg" alt="picture on tablet"width=370 height="294"></li>
+                <li><img src="images/tablet.jpg" alt="tablet" width=370 height="294"></li>
+                <li><img src="images/laptop.jpg" alt="laptop" width=370 height="294"></li>
+                <li><img src="images/pictureontablet.jpg" alt="picture on tablet" width=370 height="294"></li>
             </ul>
         </section>
         <!--Our team-->
         <section>
             <h2>Наша команда</h2>
             <ul>
-                <li> <img src="image/Ігор.jpg" alt="Igor"width=270>
+                <li> <img src="images/Igor.jpg" alt="Igor" width=270>
                 <h3>Ігор Дем'яненко</h3>
                 <p>Product Designer</p>
             </li>
-                <li> <img src="image/Ольга.jpg" alt="Olga"width=270>
+                <li> <img src="images/Olga.jpg" alt="Olga" width=270>
                 <h3>Ольга Рєпіна</h3>
                 <p>Frontend Developer</p>
             </li>
-                <li> <img src="image/Микола.jpg" alt="Mykola"width=270>
+                <li> <img src="images/Mykola.jpg" alt="Mykola" width=270>
                 <h3>Микола Тарасов</h3>
                 <p>Marketing</p>
             </li>
-                <li> <img src="image/Михайло.jpg" alt="Mykhailo"width=270>
+                <li> <img src="images/Mykhailo.jpg" alt="Mykhailo" width=270>
                 <h3>Михайло Єрмаков</h3>
                 <p>UI Designer</p>
             </li>
@@ -77,14 +78,14 @@
         </section>
     </main>
     <footer>
+        <a href="#">WebStudio</a>
         <address>
             <ul>
-                <li><a href="#">WebStudio</a></li>
                 <li> <a href="https://goo.gl/maps/cJpdM1vkZqxWry588" target="_blank" rel="noopener norefferer nofollow">м. Київ,
                         пр-т Лесі Українки, 26</a> </li>
                 <li><a href="mailto:info@devstudio.com"
                     target="_blank"
-                    rel="noopener norefferer nofollow>info@devstudio.com</a></li>
+                    rel="noopener norefferer nofollow">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>        
